# S0012D---Spelmotorarkitektur

./: .fips-imports.cmake  .fips-settings.yml  .gitignore  CMakeLists.txt  fips.yml
src/: CMakeLists.txt
src/MeshViewer/: BaseComponent.h  CMakeLists.txt  GameEntity.h  GameEntityManager.h  GraphicsComponent.h  GraphicsManager.h  MeshViewer.cc  TransformComponent.h  config.json  shaders.shd
